2002-01-14  Sam Steingold  <sds@gnu.org>

	add :SCREEN to *FEATURES* when the "SCREEN" package is present
	* init.lisp: use #+SCREEN instead of (find-package "SCREEN")
	* spvw.d (*features*): add :SCREEN #ifdef SCREEN

2002-01-12  Sam Steingold  <sds@gnu.org>

	* trace.lisp (trace1): made macros traceable again (broken since
	the 2000-06-11 patch introducing MACRO type)
	(fdefinition-local): removed (replaced with LOCAL)
	(local): new macro (SETF-able)
	(local-function-name-p): new function
	* init.lisp (local): export from EXT

2002-01-11  Sam Steingold  <sds@gnu.org>

	close all inaccessible PIPE and SOCKET streams on GC, like file streams
	* stream.d (add_to_open_streams): new function
	(make_file_stream, make_terminal_stream, make_printer_stream):
	 use it instead of in-line code
	(MAKE-PIPE-INPUT-STREAM, MAKE-PIPE-OUTPUT-STREAM, MAKE-PIPE-IO-STREAM)
	(SOCKET-ACCEPT, SOCKET-CONNECT, SYS::MAKE-SOCKET-STREAM):
	 call add_to_open_streams() too
	Reported by Todd Sabin <tas@webspan.net>

2002-01-10  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): --version: print *FEATURES*

2002-01-10  Sam Steingold  <sds@gnu.org>

	* package.d (cerror_package_locked): error-format-string: print
	func with ~A so that "DEFUN/DEFMACRO" is printed without quotes

2002-01-10  Sam Steingold  <sds@gnu.org>

	fixed a bug in the 2001-11-09 patch
	* pathname.d (CD): slashp expects a chart, not cint

2002-01-10  Sam Steingold  <sds@gnu.org>

	fixed (format nil "~2f" 1234567.1234) => "1234567."
	* format.lisp (format-float-for-f): pass 0 as DMIN to
	FORMAT-FLOAT-TO-STRING

2002-01-09  Sam Steingold  <sds@gnu.org>

	notice function redefinitions again
	* compiler.lisp (c-DEFUN): accept optional argument TYPE, to
	distinguish between DEFUN and DEFMETHOD (CURRENT-FUNCTION for
	top-level forms does not return anything useful)
	* clos.lisp (defmethod, defgeneric): pass the 4th argument to c-DEFUN

2002-01-09  Sam Steingold  <sds@gnu.org>

	fixed bug #501166